storage/xtradb/srv/srv0srv.c
@@ -411,6 +411,13 @@ UNIV_INTERN ibool	srv_use_sys_stats_table = FALSE;
 #ifdef UNIV_DEBUG
 UNIV_INTERN ulong	srv_sys_stats_root_page = 0;
 #endif
+/* The number of rows modified before we calculate new statistics (default 0
+= current limits) */
+UNIV_INTERN unsigned long long srv_stats_modified_counter = 0;
+
+/* Enable traditional statistic calculation based on number of configured
+pages default false. */
+UNIV_INTERN my_bool	srv_stats_sample_traditional = FALSE;
 
 UNIV_INTERN ibool	srv_use_doublewrite_buf	= TRUE;
 UNIV_INTERN ibool       srv_use_atomic_writes = FALSE;
